Replaced List.of with Collections.singletonList in CustomPropertyAdapterTests